# Overthink-HGA

./: .env.example  .gitignore  README.md  algorithm.md  algorithm.py  main.py  model.py  pyproject.toml
HGA/: algorithm.py
data/: gsm8k_test.jsonl
models/: model.py  types.py
prompts/: prompts.py
