[project]
name = "Overthink-HGA"
version = "0.1.0"
description = 'Official implementation of "Inducing Overthink: Hierarchical Genetic Algorithm-based DoS Attack on Black-Box Large Language Reasoning Models" (ICML 2026).'
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "openai>=1.102.0",
    "swanlab>=0.6.9",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
